0.3.4 July 4, 2011 

- Change to Ruby License
- Add option 'term_adjust' to ignore terminal sequences in text

0.3.3 June 12, 2011 Fleetwood release

- More general but simpler inteface using an options
  hash. Compatibility is maintaind though.

0.3.2  

- Mostly Administrivia. 
  * Add .gemspec, correct description field and add a summary. 
  * Add Columnize::VERSION 
  * Simplify Rakefile
  * Add stub Makefiles

0.3.1  (01-07-26) 

- Correct for Ruby 1.9 (Mark Moseley)

- add optional lineprefix parameter

0.3.0  (01-10-09) - Sam Woodward Release

- Fix bad bug in arranging horizontally

0.2.1 (12-31-08)

- Add ability to run columns horizontally

0.2

- Minor - get rid of hacky $0 test

0.1

- Initial release of Columnize, a module to print an Array in
  column-sorted order

$Id$