@@ -1,7 +1,7 @@
-# This file sets constant Columnize::VERSION, the version number of
+# Sets constant Columnize::VERSION, the version number of
 # this package. It is used in Gem creation but can also be consulted after
 # require'ing 'columnize'.
 module Columnize
   # The current version of this package
-  VERSION = '0.3.4dev'
+  VERSION = '0.3.4'
 end
